# trian

./: CMakeLists.txt  Dockerfile  Edge.cc  Edge.hh  Functions.hh  Mesh.cc  Mesh.hh  README.md  Trian.cc  Trian.hh  Triangle.cc  Triangle.hh  Vertex.cc  Vertex.hh  main.cc  pre-commit.hook  setup-hook.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Edge.cc  Edge.hh  Functions.cc  Functions.hh  Graphics.cc  Graphics.hh  LibConsts.hh  Mesh.cc  Mesh.hh  Shader.cc  Shader.hh  Trian.h  Triangle.cc  Triangle.hh  Vertex.cc  Vertex.hh  main.cc  position.vert  red.frag  triangulation.cpp  vertices.txt
